# secretish-balloting

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  pyproject.toml  readme.md  run.sh
secretish_balloting/: db.sqlite3  manage.py
secretish_balloting/balloting/: admin.py  apps.py  models.py  urls.py  views.py
secretish_balloting/balloting/email_templates/: instructions.txt
secretish_balloting/balloting/migrations/: 0001_initial.py  0002_ballot_url_fragment_text.py  0002_superuser.py  0003_choice_order_int.py  0004_auto_20210313_2150.py  0005_voter.py  0006_auto_20210314_1619.py  0007_ballot_url_summary_fragment_text.py  0008_auto_20210404_2213.py
secretish_balloting/balloting/templates/balloting/: emailer.html  results.html  summary.html  vote.html
secretish_balloting/secretish_balloting/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_secretish_balloting.py
