[tool.poetry]
name = "secretish-balloting"
version = "0.1.0"
description = "A Django app to permit secretish balloting for somewhat anonymised users (not completely secret nor anonymous as the app owner can see the database)"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ptpython = "^3.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
